--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-# Configuration file
-# key = value
+quarkus.datasource.url=jdbc:h2:mem:db1;DB_CLOSE_DELAY=-1
+quarkus.datasource.driver=org.h2.Driver
+
+quarkus.hibernate-orm.database.generation=drop-and-create
