--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,11 @@ quarkus.datasource.url=jdbc:h2:mem:db1;DB_CLOSE_DELAY=-1
 quarkus.datasource.driver=org.h2.Driver
 
 quarkus.hibernate-orm.database.generation=drop-and-create
+
+quarkus.hibernate-search.elasticsearch.version=7.4
+quarkus.hibernate-search.elasticsearch.hosts=http://localhost:9200
+
+quarkus.hibernate-search.elasticsearch.index-defaults.lifecycle.strategy=drop-and-create
+quarkus.hibernate-search.elasticsearch.index-defaults.lifecycle.required-status=yellow
+
+quarkus.hibernate-search.elasticsearch.analysis.configurer=com.acme.AnalyzerConfigurer
